<resources>
    <!--@Author: Yujing Zhang u7671098: edited part of the string-->
    <string name="app_name">My Dwelling</string>
    <string name="fire_alarm">Fire Alarm</string>
    <string name="follow">Follow</string>
    <string name="addr_n_seismicrating_n_needrepair_n_year_of_construction_n_building_life_n_materials_n">Addr: \n SeismicRating: \n NeedRepair: \n Year of Construction: \n Building Life: \n Materials: \n</string>
    <string name="default_image">default image</string>
    <string name="back">Back</string>
    <string name="loginbutton">Login</string>
    <!--Login page-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="author">COMP6442-G20</string>
    <string name="welcome">Welcome to My Dwelling</string>
    <string name="search">search</string>
    <string name="search_here">Search here</string>
    <string name="repaired_today">Repaired today</string>
    <string name="map">Map</string>
    <string name="user">My Profile</string>

</resources>