<?xml version="1.0" encoding="utf-8"?>
<!--@Author:Yujing Zhang u7671098-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/warmBackground"
    tools:context=".UserActivity">
    <com.google.android.material.bottomnavigation.BottomNavigationView

        android:id="@+id/bottomNavigationView"
        android:layout_width="409dp"
        android:layout_height="70dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navi" />

    <LinearLayout
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_width="409dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="Welcome! username"
            android:textColor="@color/themeGreen"
            android:textSize="24dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/messagetitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:padding="8dp"
            android:text="History"
            android:textColor="@color/themeOrange"
            android:textSize="18dp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/logList"
            android:dividerHeight="6dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@color/white"
            android:divider="@color/warmBackground"
            android:padding="16dp">

        </ListView>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>