<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/map"
        android:title="@string/map" />
    <item
        android:id="@+id/nav_user"
        android:icon="@drawable/user"
        android:title="@string/user" />
</menu>